2006-02-26  Roland McGrath  <roland@redhat.com>

	* timezone/africa: Update from tzdata2006b (comment changes only).
	* timezone/antarctica: Likewise.
	* timezone/asia: Likewise.
	* timezone/australasia: Likewise.
	* timezone/backward: Likewise.
	* timezone/etcetera: Likewise.
	* timezone/europe: Likewise.
	* timezone/factory: Likewise.
	* timezone/iso3166.tab: Likewise.
	* timezone/leapseconds: Likewise.
	* timezone/northamerica: Likewise.
	* timezone/pacificnew: Likewise.
	* timezone/solar87: Likewise.
	* timezone/solar88: Likewise.
	* timezone/solar89: Likewise.
	* timezone/southamerica: Likewise.
	* timezone/systemv: Likewise.
	* timezone/zone.tab: Likewise.

2006-02-26  Ulrich Drepper  <drepper@redhat.com>

	* elf/do-lookup.h (do_lookup_x): No need to compare SKIP to NULL
	before comparison with MAP.

	* elf/dl-sym.c (do_sym): For RTLD_NEXT, pass MATCH to
	dl_lookup_symbol_x instead of L.

2006-02-24  Mike Frysinger  <vapier@gentoo.org>

	* sysdeps/gnu/net/if.h (IFF_DYNAMIC): New macro.

2006-02-24  David S. Miller  <davem@sunset.davemloft.net>

	* configure.in: Use sparc/sparc32/sparcv9/sparcv9b in place
	of sparc/sparc32/sparcv9b.
	* sysdeps/sparc/sparc32/sparcv9b/Implies: File removed.
	* sysdeps/unix/sysv/linux/sparc/sparc32/sparcv9b/Implies: File removed.

2006-02-24  Roland McGrath  <roland@redhat.com>

	* elf/elf.h (HWCAP_SPARC_BLKINIT): New macro.
	* sysdeps/sparc/dl-procinfo.h (HWCAP_IMPORTANT): Add it.
	(_DL_HWCAP_COUNT): Increase to 7.
	* sysdeps/sparc/dl-procinfo.c (_dl_sparc_cap_flags): Add "v9v".
	From David S. Miller <davem@sunset.davemloft.net>.

	* sysdeps/unix/sysv/linux/sparc/sparc64/dl-procinfo.c: Moved to ...
	* sysdeps/sparc/dl-procinfo.c: ... here, new file.
	* sysdeps/unix/sysv/linux/sparc/sparc64/dl-procinfo.h: Moved to ...
	* sysdeps/sparc/dl-procinfo.h: ... here, new file.
	(HWCAP_IMPORTANT): Include HWCAP_SPARC_V9 when [__WORDSIZE != 64].
	* sysdeps/unix/sysv/linux/sparc/sparc32/dl-procinfo.c: File removed.